--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,13 +1,14 @@
 body {
-    display: flex;
-    justify-content: center;
-    transition: all 1s;
-    // komentarz
-    appearance: none;
+	display: flex;
+	justify-content: center;
+	transition: all 1s;
+	// komentarz
+	appearance: none;
+	background-color: purple;
 }
 
 p {
-    font-family: sans-serif;
-    font-size: 48px;
-    color: #000;
+	font-family: sans-serif;
+	font-size: 48px;
+	color: #000;
 }
